testing delete digital book (#61)
* test: delete Digital book Test
Stub repository

* test: delete Digital book Test

* test: delete Digital book Test

* test:  modify Digital book Test

* test:  modify Digital book Test(delete)

* Testing modify digital book (#62)

* test:  modify Digital book Test

* test:  get list Digital book Test (#63)

* test:  get list Digital book Test

* test:  get one Digital book Test (#64)

* test:  get one Digital book Test

* Testing save loan (#65)

* test:  save Loan Test

* chore:  save Loan Test(rename @Test)

* Delete Loan Test (#66)

* chore:  delete Loan Test(and any chores)

* chore:  delete Loan Test(and any chores)

* Testing get unfinished loans (#67)

* test:  get Unfinisehd Loan Test list

* test: Get loans Unfinished test with Mockito

* Testing get complete loans (#68)

* test: list Complete loans test

* test: return loan test (#69)